Added images (#52)